--- a/project-manager.html
+++ b/project-manager.html
@@ -40,16 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/linkedin/job/o6VBafww'>LinkedIn Careers - Insights Program Manager, LinkedIn Marketing Solutions</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/jobs/sr-project-manager-58311'>Sr Project Manager - CBRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://shijigroup.join.com/jobs/251716-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692290599-project-manager'>Octopus Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692108021-it-operations-project-manager'>Octopus IT Operations Project Manager | SmartRecruiters</a></h5> 
@@ -84,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boh.referrals.selectminds.com/jobs/project-manager-corporate-real-estate-facilities-3745'>Project Manager (Corporate Real Estate & Facilities) - Bank of Hawaii Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boh.referrals.selectminds.com/jobs/project-manager-corporate-real-estate-facilities-3745'>Project Manager (Corporate Real Estate & Facilities) - Bank of Hawaii Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -120,7 +128,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/epizyme/job/oRSBafwe'>Epizyme Careers - Associate Clinical Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/epizyme/job/oRSBafwe'>Epizyme Careers - Associate Clinical Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -219,7 +227,7 @@ specializes in?...</p>
 <p>6 days ago ... About the Company: A roofing and building envelope subcontractor specializing 
 in roofing, waterproofing & restoration with a project portfolio consisting of?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atheneum.recruitee.com/o/program-manager'>
+<h5><a href='https://atheneum.recruitee.com/o/program-manager'>
       Program Manager - Atheneum Partners
     </a></h5> 
 <p><span class="badge badge-light">Berlin London</span></p>
@@ -278,7 +286,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://wolframresearch.recruiterbox.com/jobs/fk03fos'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wolframresearch.recruiterbox.com/jobs/fk03fos'>
     Partner Project Manager  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -297,7 +305,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p>6 days ago ... We have an opportunity for a project analyst to join our team as we establish a 
 new program management office to support the NIH. On our team, you'll monitor?...</p>
 <hr/>
-<h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk03fos/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk03fos/'>
     Partner Project Manager  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -315,7 +323,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upwork-tac.workable.com/j/46754F62B7'>Upwork - Jobs: Marketing Project Manager (B2B) - Apply online</a></h5> 
+<h5><a href='https://upwork-tac.workable.com/j/46754F62B7'>Upwork - Jobs: Marketing Project Manager (B2B) - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -343,7 +351,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dvele/e6e8ef4e-9962-4b31-9ffb-4d6f71b73bb3'>Dvele - Site Project Manager/ Estimator</a></h5> 
+<h5><a href='https://jobs.lever.co/dvele/e6e8ef4e-9962-4b31-9ffb-4d6f71b73bb3'>Dvele - Site Project Manager/ Estimator</a></h5> 
 <p><span class="badge badge-light">Santa Rosa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -428,7 +436,7 @@ in?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/csenergy/416e1b8b-88cb-40d3-a169-daece57eaee2'>CS Energy - Assistant Project Manager - NY</a></h5> 
+<h5><a href='https://jobs.lever.co/csenergy/416e1b8b-88cb-40d3-a169-daece57eaee2'>CS Energy - Assistant Project Manager - NY</a></h5> 
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -464,7 +472,7 @@ in?...</p>
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talent-acquisition-concepts.breezy.hr/p/9831177f3cda-construction-project-manager'>Construction Project Manager at Talent Acquisition Concepts</a></h5> 
+<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/9831177f3cda-construction-project-manager'>Construction Project Manager at Talent Acquisition Concepts</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -494,16 +502,6 @@ in?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Project Manager. Job description. At SkinVision, we are on a mission to save the 
 lives of 250,000 people in the next ten years by revolutionizing the way we care?...</p>
-<hr/>
-<h5><a href='https://codetribe.recruitee.com/o/it-project-manager-novi-sad'>IT Project Manager - Codetribe</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... IT Project Manager. Novi Sad, Serbia. About the role: Your main focus is to keep 
-your projects on track. This means you are able to juggle with planning, timing,?...</p>
-<hr/>
-<h5><a href='https://codetribe.recruitee.com/o/associate-it-project-manager'>Associate IT Project Manager - Codetribe</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... Associate IT Project Manager. Novi Sad, Serbia. About the role: Are you curious, 
-motivated, and forward-thinking? At Codetribe you'll have the opportunity to?...</p>
 <hr/>
 
 
