--- a/full-stack.html
+++ b/full-stack.html
@@ -42,8 +42,8 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://movinga.join.com/jobs/270577-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://movinga.join.com/jobs/270577-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://innogy.join.com/jobs/251568-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
@@ -76,13 +76,19 @@
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999692277899-senior-javascript-full-stack-developer'>DevIQ Senior Javascript Full-Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999692277899-senior-javascript-full-stack-developer'>DevIQ Senior Javascript Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://crossbeam.workable.com/j/D1112F3072'>Crossbeam - Jobs: Full Stack Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
+<hr/>
+<h5><a href='https://rochester-talent.freshteam.com/jobs/CS4Lv_PJjX-r/full-stack-developer'>full stack developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... FULL STACK DEVELOPER. Ch?a, Cundinamarca | Full time. Apply Now. 
+Rochester School is a private school focused on environmental sustainability and
+?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/corelight/jobs/1789018'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
@@ -151,11 +157,11 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adroll/jobs/1787963'>Job Application for Senior Full Stack Engineer, Web Applications at AdRoll Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adroll/jobs/1787963'>Job Application for Senior Full Stack Engineer, Web Applications at AdRoll Group</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dvele/a7ce2c6c-11f4-4f7f-bc9f-20f735157c9a'>Dvele - Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dvele/a7ce2c6c-11f4-4f7f-bc9f-20f735157c9a'>Dvele - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -199,7 +205,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wish/5351e764-8f8e-41fe-af86-08266e2ec18e'>Wish - Full Stack Software Engineer: Internal Tools, Product Web</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wish/5351e764-8f8e-41fe-af86-08266e2ec18e'>Wish - Full Stack Software Engineer: Internal Tools, Product Web</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -209,7 +215,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedge.recruiterbox.com/jobs/fk03fr7/'>
+<h5><a href='https://dedge.recruiterbox.com/jobs/fk03fr7/'>
     D?veloppeur Fullstack PHP/Javascript Junior (H/F) at D-EDGE
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -288,7 +294,7 @@ environment?...</p>
 <p>6 days ago ... Balihoo is now hiring a Sr. Full Stack Python Engineer in Chicago. Review all of 
 the job details and apply today!</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1788488'>Job Application for Senior Full Stack Web Developer at Mozilla</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1788488'>Job Application for Senior Full Stack Web Developer at Mozilla</a></h5> 
 <p><span class="badge badge-light">San Francisco Mountain View Vancouver Toronto London Paris Berlin Denver Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -305,7 +311,7 @@ the job details and apply today!</p>
 <p>1 day ago ... Apply online for the job of Senior Back End Java Developer (Full Stack) at Youtap 
 Limited.</p>
 <hr/>
-<h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Full Stack Developer at Food52.</p>
 <hr/>
@@ -325,7 +331,7 @@ Limited.</p>
 machine learning engineers, to craft and implement new product features. You 
 also?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
@@ -404,7 +410,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bixal/ac505db4-664a-4135-8b07-b8b4376423fa'>Bixal - Full Stack Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/bixal/ac505db4-664a-4135-8b07-b8b4376423fa'>Bixal - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -412,7 +418,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071872-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071872-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -468,10 +474,6 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <hr/>
 <h5><a href='https://jobs.lever.co/brighthealthplan/e91c1318-1eb6-4882-92c6-242a891b41b9'>Bright Health - Sr. Full-Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/theblacktux/8e416a8b-4e40-404d-a38f-bff504eba027'>The Black Tux - Software Engineer - Full Stack</a></h5> 
-<p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
